# csharpmake

./: .gitignore  .gitmodules  CMakeLists.txt  CompileSharpmake.bat.patch  README.md  base.sharpmake.cs  common.sharpmake.cs  create_workspace.cmake  csharpmake_workspace.cmake  csharpmakepkg_workspace.cmake  install_workspace.cmake  vcpkg_CMakeLists.txt  vcpkg_dependencies.sharpmake.cs  vcpkg_dependencies_base.sharpmake.cs  vcpkg_dependencies_builtin.sharpmake.cs  workspace.sharpmake.cs  ws_activate.bat  ws_cleanup.bat  ws_create.bat  ws_deactivate.bat  ws_destroy.bat  ws_devenv.bat  ws_devenv_sharpmake.bat  ws_devenv_workspace.bat  ws_generate_sharpmake.bat  ws_sharpmake.bat
test/: CMakeLists.txt
ws_template/: vcpkg_dependencies.sharpmake.cs
